forum alignment fixed

--- a/src/Screens/Forum/SingleForum/components/style.scss
+++ b/src/Screens/Forum/SingleForum/components/style.scss
@@ -1,10 +1,10 @@
 .admin-forum-card {
   box-shadow: rgba(100, 100, 111, 0.2) 0 3px 11px 0;
   margin: 20px;
-  flex-grow: 1;
-  min-width: 450px;
-  max-width: 500px;
-  width: 500px;
+  //flex-grow: 1;
+  min-width: 300px;
+  width: 300px;
+  //width: 500px;
   cursor: pointer;
 
   .author {
